--- a/scl-doubtology/udayagiri/templates/webpages/teacher_detail.html
+++ b/scl-doubtology/udayagiri/templates/webpages/teacher_detail.html
@@ -10,14 +10,6 @@
                     <h3 class="text-dark mb-0">Teachers</h3></div>
 
 <main class="single-page-tubers">
-    <div class="banner">
-      <img src="{% static './assets/images/bg-banner.png' %}" alt="" class="img-fluid w-100">
-      <h1 class="text-center">
-        {{tuber.name}}
-      </h1>
-    </div>
-
-
 
     <section class="head container mt-5 mb-5">
       <div class="row">
@@ -26,21 +18,21 @@
         </div>
         <div class="col-md-4 d-flex justify-content-center align-items-center">
           <h1 class="text-accent text-center">
-            $ {{tuber.price}}
+            $ {{teacher.price}}
           </h1>
         </div>
         <div class="col-md-4 d-flex justify-content-center align-items-center">
-          <img src="{{tuber.photo.url}}" class="img-fluid" alt="team-member">
+          <img src="{{teacher.photo.url}}" class="img-fluid" alt="team-member">
         </div>
       </div>
     </section>
     <section class="video container text-center">
-        <iframe width="560" height="315" src="https://www.youtube.com/embed/{{tuber.video_url}}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/{{teacher.video_url}}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
     </section>
     <section class="descritpion container">
       <h4>Descritpion</h4>
       <p class="mt-2 mb-2">
-          {{tuber.description | safe }}
+          {{teacher.description | safe }}
       </p>
 
       
@@ -50,14 +42,14 @@
     <section class="container w-50">
 
       <div class="person-description mt-2">
-        <button class="btn btn-accent"> City: {{tuber.city}} </button>
-        <button class="btn btn-accent"> Age: {{tuber.age}} </button>
-        <button class="btn btn-accent"> Height: {{tuber.height}} </button>
+        <button class="btn btn-accent"> City: {{teacher.city}} </button>
+        <button class="btn btn-accent"> Age: {{teacher.age}} </button>
+        <button class="btn btn-accent"> Height: {{teacher.height}} </button>
       </div>
       <div class="person-description mt-2">
-        <button class="btn btn-accent"> Solo: {{tuber.crew}} </button>
-        <button class="btn btn-accent"> Canon: {{tuber.camera_type}} </button>
-        <button class="btn btn-accent"> Subs: {{tuber.subs_count}} </button>
+        <button class="btn btn-accent"> Solo: {{teacher.crew}} </button>
+        <button class="btn btn-accent"> Canon: {{teacher.camera_type}} </button>
+        <button class="btn btn-accent"> Subs: {{teacher.subs_count}} </button>
       </div>
 
     </section>
@@ -72,7 +64,7 @@
           {% else %}
           <input type="hidden" name="user_id" value="00">
           {% endif %}
-          <input type="hidden" name="tuber_id" value="{{tuber.id}}">
+          <input type="hidden" name="tuber_id" value="{{teacher.id}}">
 
           <div class="form-row">
             <div class="form-group col-md-4">
@@ -94,7 +86,7 @@
             <select name="tuber_name"  class="form-control">
               <option selected disabled hidden>Select tuber</option>
              
-              <option value="{{tuber.name}}">{{tuber.name}}</option>
+              <option value="{{teacher.name}}">{{teacher.name}}</option>
              
             </select>
           </div>
