--- a/scl-doubtology/udayagiri/templates/teachers/teacher_detail.html
+++ b/scl-doubtology/udayagiri/templates/teachers/teacher_detail.html
@@ -77,10 +77,10 @@
     
       <div class="row">
         <div class="col-md-4 d-flex justify-content-center align-items-center">
-          <h1 class="text-center">{{tuber.name}}</h1>
+          <h1 class="text-center">{{teacher.name}}</h1>
         </div>
         <div class="col-md-4 d-flex justify-content-center align-items-center">
-          <img src="{{teacher.photo.url}}" class="img-fluid" alt="team-member">
+          <img src="{{teacher.photo.url}}" class="img-fluid rounded" alt="{{teacher.name}}">
         </div>
       </div>
     
@@ -105,7 +105,7 @@
     <section class="youtuber-form container mt-5 mb-5">
       <div class="row">
         <form method="POST" action="{% url 'student' %}" class="col-md-8 offset-md-2">
-          <h3 class="pt-2 pb-2">Fill the Form and reach out</h3>
+          <h3 class="pt-2 pb-2">Fill the Form and reach out {{teacher.name}}</h3>
           {% csrf_token %}
           {% if user.is_authenticated %}
           <input type="hidden" name="user_id" value="{{user.id}}">
@@ -132,7 +132,7 @@
 
           <div class="form-group">
             <select name="tuber_name"  class="form-control">
-              <option selected disabled hidden>Select tuber</option>
+              <option selected disabled hidden>Select Teacher</option>
              
               <option value="{{teacher.name}}">{{teacher.name}}</option>
              
@@ -156,7 +156,7 @@
             <textarea name="message" class="form-control" rows="3" placeholder="Details Message"></textarea>
           </div>
           <div class="text-center">
-            <button type="submit" class="btn btn-primary">Contact Us</button>
+            <button type="submit" class="btn btn-primary">Contact {{teacher.name}}</button>
           </div>
 
         </form>
