--- a/scl-doubtology/udayagiri/templates/auth_templates/forgot_password.html
+++ b/scl-doubtology/udayagiri/templates/auth_templates/forgot_password.html
@@ -1,5 +1,6 @@
 {% extends 'auth_base.html' %}
 {% block content %}
+{% load static %}
 
         <div class="row justify-content-center">
             <div class="col-md-9 col-lg-12 col-xl-10">
@@ -7,7 +8,10 @@
                     <div class="card-body p-0">
                         <div class="row">
                             <div class="col-lg-6 d-none d-lg-flex">
-                                <div class="flex-grow-1 bg-password-image" style="background-image: url(&quot;assets/img/dogs/image1.jpeg&quot;);"></div>
+
+                        <img src="{% static 'webpages_static/forgot_pass.svg' %}" class="img-fluid" alt="Sushiksha">
+                 
+
                             </div>
                             <div class="col-lg-6">
                                 <div class="p-5">
