--- a/scl-doubtology/udayagiri/templates/auth_templates/register.html
+++ b/scl-doubtology/udayagiri/templates/auth_templates/register.html
@@ -1,11 +1,14 @@
 {% extends 'auth_base.html' %}
 {% block content %}
+{% load static %}
 
 <div class="card shadow-lg o-hidden border-0 my-5">
             <div class="card-body p-0">
                 <div class="row">
                     <div class="col-lg-5 d-none d-lg-flex">
-                        <div class="flex-grow-1 bg-register-image" style="background-image: url(&quot;assets/img/dogs/image2.jpeg&quot;);"></div>
+                        
+                        <img src="{% static 'webpages_static/register.svg' %}" class="img-fluid" alt="Sushiksha">
+                   
                     </div>
                     <div class="col-lg-7">
                         <div class="p-5">
